2003-07-11  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Thread/daemon.java
	fixed tests to match the behaviour of JDKs when setDaemon()
	is called on an exitted Thread.  Made tests more robust.

2003-07-11  Stephen Crawley  <crawley@dstc.edu.au>
	
	* gnu/testlet/java/text/RuleBasedCollator/jdk11.java :
	more tests for compare with expansions and contractions

2003-07-09  Stephen Crawley  <crawley@dstc.edu.au>
	
	* gnu/testlet/java/text/RuleBasedCollator/jdk11.java : 
	tests for compare with simple rules and contraction rules
	* gnu/testlet/java/text/RuleBasedCollator/VeryBasic.java :
	fixed indentation

2003-07-05  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/java/text/RuleBasedCollator/jdk11.java : 
	more new rule parsing tests
	
2003-07-01  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/java/text/RuleBasedCollator/jdk11.java : new tests

2003-06-27  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/java/text/CollationElementIterator/jdk11.java :
	added tests that 'a'<'A' at tertiary level, etcetera

2003-06-24  Stephen Crawley  <crawley@dstc.edu.au>

	* gnu/testlet/java/text/CollationElementIterator/jdk11.java :
	rewrote tests to check the ordering of collation keys rather than
	actual key values (which are implementation dependent)

2003-06-08  Mark Wielaard  <mark@klomp.org>

	* choose: Add all classes first to usesfile to uniqify them later
	before adding them to choises.

2003-06-05  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/Test.java: Added
	regression test including "." in format; from Scott Gilbertson.

2003-06-03  Stephen Crawley  <crawley@dstc.edu.au>
	
        * gnu/testlet/java/math/BigDecimal/setScale.java: added new
	  setScale testcase from Jerry Quinn <jlquinn@optonline.net>

2003-05-24  Daniel Bonniot  <bonniot@users.sf.net>

	* gnu/testlet/java/util/Arrays/equals.java: New file.
	* gnu/testlet/java/util/LinkedList/SubListTest.java: New file.
