@@ -1,3 +1,7 @@
+2003-07-16  Stephen Crawley  <crawley@dstc.edu.au>
+	
+	* gnu/testlet/java/lang/Thread/interrupt.java : fixed indentation
+
 2003-07-11  Stephen Crawley  <crawley@dstc.edu.au>
 
 	* gnu/testlet/java/lang/Thread/daemon.java
